# titans-disposition

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/agents/capability-loop/: analyst.md  codex-weight-directive.md  librarian.md  observer.md  orchestrator.md  validator.md
.claude/dispositions/: explore.py  general-purpose.py  plan.py
.claude/hooks/: titans_disposition.py
.claude/skills/prior-casting/: SKILL.md
.claude/skills/prior-casting/domain_maps/: agent_persona.md  claude_md.md  codex_prompts.md  team_roles.md
.claude/skills/prior-casting/prompts/: analyzer.md  caster.md
.claude/skills/self-improvement/: SKILL.md
docs/: DESIGN_PHILOSOPHY.md  QUICK_START.md  SELF_IMPROVEMENT_GUIDE.md
docs/research/: CONVERGENCE_PROOF.md  INVERSE_REWARD_DESIGN.md
docs/research/prompts/: goodhart_ceiling_warmup.md  inverse_reward_design.md  titans_convergence_proof.md
examples/: basic_usage.py  replay_history.py
examples/cycles/: README.md  cycle_013.json  cycle_016.json
src/titans_disposition/: __init__.py  classifier.py  cli.py  constants.py  engine.py  gates.py  memory_state.py  storage.py  variant.py
tests/: test_classifier.py  test_gates.py  test_integration.py  test_variant.py
